[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mini Scenes/Scenes/TutorialMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/Portraits/Grolk V1.png" type="Texture" id=2]
[ext_resource path="res://Art/Portrait.png" type="Texture" id=3]
[ext_resource path="res://Mini Scenes/Pieces/StoneBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Portraits/Obrulena Alpha.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="." instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Part1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.269
margin_top = -222.761
margin_right = 270.731
margin_bottom = -135.761
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Part1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -33.8168
margin_right = 230.0
margin_bottom = 31.1832
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 1 )
text = "Part #1: An Orc's Axe"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Part1"]
margin_left = 723.17
margin_top = 0.327332
margin_right = 1235.17
margin_bottom = 512.327
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Part1/TextureRect"]
modulate = Color( 0.435294, 0.403922, 0.0666667, 1 )
margin_left = -13.6533
margin_top = -16.0095
margin_right = 530.347
margin_bottom = 583.99
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Part2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.475
margin_top = -97.3276
margin_right = 364.525
margin_bottom = -10.3276
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Part2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.772
margin_top = -33.8168
margin_right = 231.228
margin_bottom = 31.1832
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 1 )
text = "Part #2: A Monk's Letter"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Part2"]
margin_left = -91.8253
margin_top = 1.79944
margin_right = 420.175
margin_bottom = 513.799
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Part2/TextureRect"]
modulate = Color( 0.435294, 0.403922, 0.0666667, 1 )
margin_left = -13.6533
margin_top = -16.0095
margin_right = 530.347
margin_bottom = 583.99
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.107
margin_top = 125.387
margin_right = 90.8933
margin_bottom = 218.387
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5001
margin_top = -33.4081
margin_right = 45.4999
margin_bottom = 38.5919
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Part1" to="." method="_on_Part_1_button_up"]
[connection signal="button_up" from="Part2" to="." method="_on_Part_2_button_up"]
[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
